# RA_PLD

./: .gitignore  IMPLEMENTATION_OVERVIEW.md  LICENSE  PLD_accounting_tutorial.ipynb  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  usage_example.py
Docs/: API.md  GUIDE.md  MODULES.md  TESTING.md
PLD_accounting/: FFT_convolution.py  __init__.py  adaptive_random_allocation.py  convolution_API.py  core_utils.py  discrete_dist.py  distribution_discretization.py  distribution_utils.py  dp_accounting_support.py  geometric_convolution.py  random_allocation_accounting.py  random_allocation_api.py  random_allocation_gaussian.py  random_allocation_realization.py  subsample_PLD.py  types.py  utils.py
comparisons/: comparison_utils.py  data_management.py  paper_experiments.py  paper_notebook.ipynb  plotting_utils.py  visualization_definitions.py
comparisons/experiments/: PREAMBLE.py  __init__.py  delta_comparison.py  epsilon_from_sigma.py  grid_size.py  random_allocation_RDP.py  runtime.py  subsampling_comparison.py  utility_comparison.py
planning/: DEVELOPMENT_PLAN.md  PHASE_1_IMPLEMENTATION.md  PHASE_1_LINEAR_GEOMETRIC_REDESIGN.md  PHASE_2_ADAPTIVE_RESOLUTION.md  PHASE_2_IMPLEMENTATION.md  PHASE_3_IMPLEMENTATION.md  PHASE_3_PLD_REALIZATIONS.md  PHASE_4_SPARSITY_INTRODUCTION.md  STATUS.md
planning/phase_4_sparsity_baseline/: IMPLEMENTATION_INVENTORY.md  README.md  sparse_geometric_design_2026-03-08.md
planning/phase_4_sparsity_baseline/source_snapshot/PLD_accounting/: discrete_dist.py  distribution_discretization.py  dp_accounting_support.py  geometric_convolution.py  random_allocation_accounting.py  types.py
planning/phase_4_sparsity_baseline/source_snapshot/performance/: README.md  conftest.py  pytest.ini
planning/phase_4_sparsity_baseline/source_snapshot/performance/convolution/: test_sparse_performance.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  run_suites.sh  run_tests.sh  test_tolerances.py
tests/integration/: test_adaptive_resolution.py  test_core_utils.py  test_cross_path_equivalence_matrix.py  test_differential_backend_comparison.py  test_edge_cases_and_consistency.py  test_extreme_parameters.py  test_general_allocation_composition_semantics.py  test_golden_oracles.py  test_old_resolution_gap.py  test_pld_realizations.py  test_preamble_experiment.py  test_property_based_invariants.py
tests/integration/convolution/: test_convolution_consistency.py  test_convolution_methods.py  test_geometric_convolution_edge_cases.py  test_optimized_convolution.py
tests/integration/subsampling/: analytic_gaussian.py  test_sampling_schemes.py  test_subsampling.py  test_subsampling_integration.py
tests/unit/convolution/: test_binary_self_convolve.py  test_combine_distributions.py  test_convolution_api_validations.py
tests/unit/core/: test_discrete_types.py  test_discrete_utils.py  test_domination_properties.py  test_dp_accounting_support.py  test_general_allocation_composition_semantics.py  test_subsampling_validations.py
(+5 files in other folders)
