[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PLD_accounting"
version = "0.3.0"
description = "Numerical privacy accounting for random allocation and subsampling using PLDs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Moshe Shenfeld" }
]
maintainers = [
  { name = "Moshe Shenfeld" }
]
urls = { Homepage = "https://github.com/moshenfeld/PLD_accounting", Repository = "https://github.com/moshenfeld/PLD_accounting", Issues = "https://github.com/moshenfeld/PLD_accounting/issues" }
keywords = [
  "differential privacy",
  "privacy accounting",
  "privacy loss distribution",
  "pld",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "numba>=0.58",
  "dp-accounting>=0.4.3",
  "typing-extensions>=4.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "mypy>=1.10",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "mypy>=1.10",
  "build>=1.2.0",
]

[tool.setuptools.packages.find]
include = ["PLD_accounting*"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = true
show_error_codes = true
